recipes/bitnami/postgresql/18.6.7/CATALOG.md
<!-- Generated by npm run catalog:maps. Do not edit by hand. -->

# bitnami/postgresql 18.6.7 Catalog Map

This page makes the artifact chain explicit:

```text
chart -> recipe -> variants -> variant revisions -> package bases -> receipts
```

## Status

| Field | Value |
| --- | --- |
| Chart | bitnami/postgresql@18.6.7 |
| Catalog status | catalog-supported |
| Support level | supported-for-declared-scopes |
| Supported scopes | local-test |
| Production readiness | production-review-ready |
| Supported variants | static-passwords, existing-secret |
| Candidate variants | none |
| Control points | capability-profile, dependency-lock, generated-facts, hook-policy, image-digest, installer-support-object, pvc-policy, source-lock, stateful-workload, target-facts, tpl |

## Feature And Proof Summary

This is the chart-level summary. Use the variant table and receipt links below
for exact base-variant evidence.

| Field | Value |
| --- | --- |
| Adoption bucket | try-from-public-catalog |
| User status | catalog-supported-with-live-evidence |
| Strongest evidence | live-helm-vs-confighub-parity |
| Proof lanes | render parity 2/2; ConfigHub 2/2; local live 2/2; GitOps live 2/2; live parity 2/2 |
| Feature summary | generated-secrets;required-values;install-vs-upgrade;remote-dependencies |
| Hard gap | ha (curated proof lane - bespoke teaching needed) |
| Next action | choose whether static-passwords is in production scope; close or document its render-only live-readiness issue first |

## Artifact Chain

| Stage | Artifact |
| --- | --- |
| Source chart lock | [recipes/bitnami/postgresql/18.6.7/source-lock.yaml](source-lock.yaml) |
| Dependency lock | [recipes/bitnami/postgresql/18.6.7/dependency-lock.yaml](dependency-lock.yaml) |
| Recipe | [recipes/bitnami/postgresql/18.6.7/recipe.yaml](recipe.yaml) |
| Helm plan | [recipes/bitnami/postgresql/18.6.7/helm-plan.yaml](helm-plan.yaml) |
| Chart dossier | [recipes/bitnami/postgresql/18.6.7/chart-dossier.yaml](chart-dossier.yaml) |
| Control points | [recipes/bitnami/postgresql/18.6.7/control-points.yaml](control-points.yaml) |
| Value model | [recipes/bitnami/postgresql/18.6.7/value-model.yaml](value-model.yaml) |
| Weirdness and mitigations | [recipes/bitnami/postgresql/18.6.7/weirdness-and-mitigations.md](weirdness-and-mitigations.md) |
| Catalog status | [recipes/bitnami/postgresql/18.6.7/catalog-status.yaml](catalog-status.yaml) |
| Helm pain report | [recipes/bitnami/postgresql/18.6.7/helm-pain-report.yaml](helm-pain-report.yaml) |
| Installer package OCI | `oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/bitnami-postgresql:18.6.7@sha256:de7371ce62c45f958c60c9f0584aa2a5d4f0e10638c053bb20985933a709a002` |
| Installer package source | [packages/bitnami/postgresql/18.6.7](../../../../packages/bitnami/postgresql/18.6.7) |
| Installer package receipt | [recipes/bitnami/postgresql/18.6.7/publication/installer-package-receipt.yaml](publication/installer-package-receipt.yaml) |
| Machine index | [recipes/bitnami/postgresql/18.6.7/artifact-index.yaml](artifact-index.yaml) |

## Variants

| Variant | Variant file | Package base | Revision | Helm objects | cub installer objects | Match | Helm equivalence | Scan | Gate | Target facts |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| static-passwords | [recipes/bitnami/postgresql/18.6.7/variants/static-passwords/variant.yaml](variants/static-passwords/variant.yaml) | [packages/bitnami/postgresql/18.6.7/bases/static-passwords](../../../../packages/bitnami/postgresql/18.6.7/bases/static-passwords) | [recipes/bitnami/postgresql/18.6.7/revisions/static-passwords/r001/variant-revision.yaml](revisions/static-passwords/r001/variant-revision.yaml) | 7 | 8 | 7/7 | pass | warn | warn | none |
| existing-secret | [recipes/bitnami/postgresql/18.6.7/variants/existing-secret/variant.yaml](variants/existing-secret/variant.yaml) | [packages/bitnami/postgresql/18.6.7/bases/existing-secret](../../../../packages/bitnami/postgresql/18.6.7/bases/existing-secret) | [recipes/bitnami/postgresql/18.6.7/revisions/existing-secret/r001/variant-revision.yaml](revisions/existing-secret/r001/variant-revision.yaml) | 6 | 7 | 6/6 | pass | warn | warn | required Secret postgresql/postgresql-auth keys postgres-password |

## Package Bases

| Base | Path | Default | Description |
| --- | --- | --- | --- |
| static-passwords | [packages/bitnami/postgresql/18.6.7/bases/static-passwords](../../../../packages/bitnami/postgresql/18.6.7/bases/static-passwords) | no | postgresql static password demo variant rendered from bitnami/postgresql@18.6.7 |
| existing-secret | [packages/bitnami/postgresql/18.6.7/bases/existing-secret](../../../../packages/bitnami/postgresql/18.6.7/bases/existing-secret) | yes | postgresql existing Secret default variant rendered from bitnami/postgresql@18.6.7 |

## Receipts

| Variant | Revision | Receipt | Kind | Result | Path |
| --- | --- | --- | --- | --- | --- |
| static-passwords | r001 | render | RenderReceipt | recorded | [recipes/bitnami/postgresql/18.6.7/revisions/static-passwords/r001/receipts/render-receipt.yaml](revisions/static-passwords/r001/receipts/render-receipt.yaml) |
| static-passwords | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/bitnami/postgresql/18.6.7/revisions/static-passwords/r001/receipts/helm-equivalence-receipt.yaml](revisions/static-passwords/r001/receipts/helm-equivalence-receipt.yaml) |
| static-passwords | r001 | scan | ScanReceipt | warn | [recipes/bitnami/postgresql/18.6.7/revisions/static-passwords/r001/receipts/scan-receipt.yaml](revisions/static-passwords/r001/receipts/scan-receipt.yaml) |
| static-passwords | r001 | installGate | InstallGate | warn | [recipes/bitnami/postgresql/18.6.7/revisions/static-passwords/r001/receipts/install-gate.yaml](revisions/static-passwords/r001/receipts/install-gate.yaml) |
| existing-secret | r001 | render | RenderReceipt | recorded | [recipes/bitnami/postgresql/18.6.7/revisions/existing-secret/r001/receipts/render-receipt.yaml](revisions/existing-secret/r001/receipts/render-receipt.yaml) |
| existing-secret | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/bitnami/postgresql/18.6.7/revisions/existing-secret/r001/receipts/helm-equivalence-receipt.yaml](revisions/existing-secret/r001/receipts/helm-equivalence-receipt.yaml) |
| existing-secret | r001 | scan | ScanReceipt | warn | [recipes/bitnami/postgresql/18.6.7/revisions/existing-secret/r001/receipts/scan-receipt.yaml](revisions/existing-secret/r001/receipts/scan-receipt.yaml) |
| existing-secret | r001 | installGate | InstallGate | warn | [recipes/bitnami/postgresql/18.6.7/revisions/existing-secret/r001/receipts/install-gate.yaml](revisions/existing-secret/r001/receipts/install-gate.yaml) |

## Current Install Shape

```sh
cub installer setup --pull oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/bitnami-postgresql:18.6.7@sha256:de7371ce62c45f958c60c9f0584aa2a5d4f0e10638c053bb20985933a709a002 --base <variant> --work-dir <tmp> --non-interactive --namespace <namespace>
```

Use the variant table above to choose the package base. The `oci://` ref is
the public package users pull; the `packages/...` path is the repo source path
used by maintainers and proof scripts. The proof path compares regular Helm
output with real `cub installer setup` output and explains every intentional
difference, such as the Namespace support object or separated Secrets.
